# proger

./: Cargo.toml  Makefile.toml  README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/http/: create_step_page.rs  delete_step_page.rs  delete_steps_page.rs  mod.rs  new_page.rs  new_steps_page.rs  read_step_page.rs  set_steps_page.rs  update_step_page.rs  view_page.rs
backend/src/server/: mod.rs
backend/src/storage/: dynamo_db_driver.rs  mod.rs  storage_actor.rs  storage_driver.rs
backend/tests/: data.rs  server.rs
frontend/: Cargo.toml
frontend/static/: index.html
src/: lib.rs
src/protocol/: mod.rs  model.rs  request.rs  response.rs
