[package]
name = "proger-core"
version = "0.1.0"
authors = ["Ofer Affias <ofer.affias@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/vim-zz/proger"

[dependencies]
diesel = { version = "1.4", optional = true }

[features]
backend = ["diesel"]

[workspace]
members = [
    "backend",
    "frontend",
]
