[package]
name = "proger-backend"
version = "0.1.0"
authors = ["Ofer Affias <ofer.affias@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/vim-zz/proger"

[[bin]]
name = "backend"
path = "src/main.rs"

[dev-dependencies]

[dependencies]
proger-core = { path = "..", features = ["backend"] }
actix-web = { version = "2.0", features = ["openssl"] }
actix-files = "0.2.1"
actix = "0.9.0"
anyhow = "1.0"
env_logger = "0.7.1"
log = "0.4.8"
url = "2.1"
