[package]
name = "proger-backend"
version = "0.1.0"
authors = ["Ofer Affias <ofer.affias@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/vim-zz/proger"

[[bin]]
name = "backend"
path = "src/main.rs"

[dev-dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
mockall = "0.7"

[dependencies]
proger-core = { path = "..", features = ["backend"] }
actix-web = { version = "2.0", features = ["openssl"] }
actix-files = "0.2"
actix = "0.9"
anyhow = "1.0"
env_logger = "0.7"
log = "0.4"
url = "2.1"
rusoto_core = "0.43"
rusoto_dynamodb = { version = "0.43", features = ["serialize_structs", "deserialize_structs"] }
tokio = "0.2"
serde_dynamodb = "0.5"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.8"
rand = "0.7"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }